--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -23,5 +23,14 @@ body {
 }
 
 .turnBlack {
-  color: black!important;
+  color: rgba(24, 23, 23, 0.87)!important;
+}
+
+.ms-n5 {
+  /* margin-left: -40px; */
+  color: black;
+}
+
+.ms-n5:hover {
+  color: red;
 }
