--- a/css/SendMoney.css
+++ b/css/SendMoney.css
@@ -22,5 +22,15 @@ body {
 }
 
 .turnBlack {
-  color: black!important;
+  color: rgba(24, 23, 23, 0.87)!important;
+}
+
+.fontColP {
+  font-size: 15px;
+  color: gray;
+}
+
+.fontCol {
+  font-size: 12px;
+  color: gray;
 }
