--- a/css/UserSignUp.css
+++ b/css/UserSignUp.css
@@ -21,3 +21,22 @@ button {
 .testShadow {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
+.form-outline.success input {
+  border-color: #39df7e;
+}
+
+.form-outline.error input {
+  border-color: #df3434;
+}
+
+.form-outline.error p {
+  visibility: visible;
+}
+
+.form-outline p {
+  color: #df3434;
+  position: absolute;
+  visibility: hidden;
+}
+
