--- a/css/UserLogIn.css
+++ b/css/UserLogIn.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
 
 body {
+  --color-error: #df3434;
+  --color-success: #4bb544;
+
+
   font-family: 'Poppins', sans-serif!important;
   font: 500 1rem 'Poppins', sans-serif!important;
 }
@@ -22,4 +26,12 @@ body {
 
 .testShadow {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.form__message--success {
+  color: var(--color-success);
+}
+
+.form__message--error {
+  color: var(--color-error);
 }
