--- a/css/FundTran.css
+++ b/css/FundTran.css
@@ -66,11 +66,26 @@ body {
 }
 
 .turnBell {
-  color: rgb(99, 98, 98)!important;
-  font-size: 15px;
+  color: black;
+  font-size: 20px;
 }
 
 .titleSize {
   font-size: 12px;
   color: gray;
+}
+
+.badge {
+  position: relative;
+  top: -22px;
+  left: -25px;
+  border: 1px solid black;
+  border-radius: 25%;
+  color: black!important;
+  background-color: white!important;
+}
+
+.badge:hover {
+  color: white!important;
+  background-color: black!important;
 }
