--- a/css/UserProfile.css
+++ b/css/UserProfile.css
@@ -50,3 +50,23 @@ body {
 .giveStyling {
   color: #df3434;
 }
+
+.turnBell {
+  color: black;
+  font-size: 20px;
+}
+
+.badge {
+  position: relative;
+  top: -22px;
+  left: -25px;
+  border: 1px solid black;
+  border-radius: 25%;
+  color: black!important;
+  background-color: white!important;
+}
+
+.badge:hover {
+  color: white!important;
+  background-color: black!important;
+}
